# rello

./: .gitignore  Cargo.toml  README.md  test_board.toml
src/: board.rs  main.rs  tests.rs
