[package]
name = "rello"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
log = "0.4"
pretty_env_logger = "0.4.0"
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
